--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "readme.md",
+            "file": "_articles/Greetings.md",
             "mode": "source",
             "source": true
           }
@@ -77,7 +77,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "readme.md",
+                "file": "_articles/Greetings.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -94,7 +94,7 @@
             "state": {
               "type": "outgoing-link",
               "state": {
-                "file": "readme.md",
+                "file": "_articles/Greetings.md",
                 "linksCollapsed": false,
                 "unlinkedCollapsed": true
               }
@@ -117,7 +117,7 @@
             "state": {
               "type": "outline",
               "state": {
-                "file": "readme.md"
+                "file": "_articles/Greetings.md"
               }
             }
           }
@@ -130,15 +130,15 @@
   },
   "active": "7c45b8dc98202578",
   "lastOpenFiles": [
+    "_articles/Configure Exocore for Personal Use.md",
+    "_articles/The Exocore Package.md",
+    "_daily/2022-10-01.md",
+    "readme.md",
     "index.md",
     "_journal/Exocore Feedback.md",
     "_journal/Grip Training.md",
     "_journal/Kariyushi Wear.md",
     "_wiki/Female Body Training Routine.md",
-    "_articles/Metabolic Switch 3 Week Diet.md",
-    "_journal/YAYO Radio.md",
-    "_journal/Wrist Pain Exercises.md",
-    "_journal/Why is Sesame Oil the only Traditionally Consumed Seed Oil.md",
-    "_journal/Sleep Complex.md"
+    "_articles/Metabolic Switch 3 Week Diet.md"
   ]
 }
