--- a/exocore/data/user.yml
+++ b/exocore/data/user.yml
@@ -3,7 +3,7 @@
 # You can edit this file to change your user details
 
 # The name displayed on your profile card:
-user_name: Remilia Corporation
+user_name: Milady Sonora Sprite
 
 
 # The URL that your name will point to ('/' means home):
@@ -15,12 +15,11 @@ profile_pic: assets/imgs/pfp.png
 
 
 # The header that will be displayed on your homepage:
-welcome_header: Welcome to the Exocore
+welcome_header: Welcome to a new day of Sprite.
 
 
 # The subtitle to the above header on your homepage:
-welcome_subtitle: A navigable, organised hypertext personal knowledge base
-
+welcome_subtitle: You start Dancing on the Plastic Stage.
 
 # Include the Viral Public License at the bottom of your posts (Accepts true/false). Read more about the VPL at https://viralpubliclicense.org.
 
