--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -130,15 +130,15 @@
   },
   "active": "7c45b8dc98202578",
   "lastOpenFiles": [
+    "_daily/2022-10-01.md",
+    "_articles/Set up a Custom Domain.md",
+    "_articles/Greetings.md",
     "_articles/Configure Exocore for Personal Use.md",
     "_articles/The Exocore Package.md",
-    "_daily/2022-10-01.md",
     "readme.md",
     "index.md",
     "_journal/Exocore Feedback.md",
     "_journal/Grip Training.md",
-    "_journal/Kariyushi Wear.md",
-    "_wiki/Female Body Training Routine.md",
-    "_articles/Metabolic Switch 3 Week Diet.md"
+    "_journal/Kariyushi Wear.md"
   ]
 }
