--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -130,15 +130,15 @@
   },
   "active": "7c45b8dc98202578",
   "lastOpenFiles": [
+    "_articles/Greetings.md",
+    "_articles/Kaomoji Weaponry.md",
+    "_daily/2022-10-01.md",
     "index.md",
     "readme.md",
     "ring.md",
     "_daily/2022-05-11.md",
-    "_daily/2022-10-01.md",
     "_articles/Using your Exocore.md",
     "_articles/Writing with Exocore Syntax.md",
-    "_scrapbook/Predictive Processing and the Free Energy Principle.md",
-    "assets/imgs/pfp.png",
-    "_articles/Greetings.md"
+    "_scrapbook/Predictive Processing and the Free Energy Principle.md"
   ]
 }
