--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "_articles/Kaomoji Weaponry.md",
+            "file": "_site/readme.md",
             "mode": "source",
             "source": true
           }
@@ -77,7 +77,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "_articles/Kaomoji Weaponry.md",
+                "file": "_site/readme.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -94,7 +94,7 @@
             "state": {
               "type": "outgoing-link",
               "state": {
-                "file": "_articles/Kaomoji Weaponry.md",
+                "file": "_site/readme.md",
                 "linksCollapsed": false,
                 "unlinkedCollapsed": true
               }
@@ -117,7 +117,7 @@
             "state": {
               "type": "outline",
               "state": {
-                "file": "_articles/Kaomoji Weaponry.md"
+                "file": "_site/readme.md"
               }
             }
           }
@@ -130,15 +130,15 @@
   },
   "active": "22f17adc312b3860",
   "lastOpenFiles": [
+    "index.md",
+    "_articles/Kaomoji Weaponry.md",
     "_daily/2022-05-11.md",
     "_daily/2022-10-01.md",
     "_articles/Set up a Custom Domain.md",
-    "_articles/Kaomoji Weaponry.md",
     "_articles/Configure Exocore for Personal Use.md",
     "_articles/Exocore Installation Instructions.md",
     "_articles/Underpinnings of the Exocore.md",
     "_articles/The Exocore Package.md",
-    "_articles/Writing with Exocore Syntax.md",
-    "_articles/Greetings.md"
+    "_articles/Writing with Exocore Syntax.md"
   ]
 }
