installation and images

--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -130,15 +130,15 @@
   },
   "active": "22f17adc312b3860",
   "lastOpenFiles": [
-    "assets/attachments/average milady.png",
-    "_articles/Phantom Bonkler.md",
-    "_articles/Exocore Installation Instructions.md",
-    "_journal/Ginseng Chicken Tonic Soup (Chinese Style).md",
-    "_journal/Samgyetang Ginseng Chicken Soup (Korean Style).md",
-    "_journal/Jade post.md",
-    "_journal/The Exocore Workflow.md",
-    "_daily/2022-10-02.md",
+    "_articles/Kaomoji Weaponry.md",
     "_articles/Auction Core Thread.md",
-    "_articles/Greetings.md"
+    "_articles/Exocore Installation Instructions.md",
+    "assets/attachments/Pasted image 20220905145302.png",
+    "assets/attachments/Screen Shot 2022-09-19 at 7.06.31 PM.png",
+    "assets/attachments/Pasted image 20220905145417.png",
+    "assets/attachments/Pasted image 20220905145302 1.png",
+    "assets/attachments/Pasted image 20220905145243.png",
+    "_articles/Phantom Bonkler.md",
+    "assets/attachments/average milady.png"
   ]
 }
