--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -128,6 +128,8 @@
   },
   "active": "22f17adc312b3860",
   "lastOpenFiles": [
+    "assets/imgs/BGtile-5.png",
+    "assets/imgs/card.png",
     "_articles/Phantom Bonkler.md",
     "_daily/2022-10-02.md",
     "_articles/Kaomoji Weaponry.md",
@@ -135,8 +137,6 @@
     "_articles/Greetings.md",
     "_articles/Exocore Installation Instructions.md",
     "assets/imgs/BGs/BGtile-1.png",
-    "assets/imgs/BGs/bg-space.gif",
-    "assets/imgs/icons/journal.png",
-    "assets/imgs/icons/pp,840x830-pad,1000x1000,f8f8f8.png"
+    "assets/imgs/BGs/bg-space.gif"
   ]
 }
