--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "_articles/Auction Core Thread.md",
+            "file": "_articles/Phantom Bonkler.md",
             "mode": "source",
             "source": true
           }
@@ -77,7 +77,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "_articles/Auction Core Thread.md",
+                "file": "_articles/Phantom Bonkler.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -94,7 +94,7 @@
             "state": {
               "type": "outgoing-link",
               "state": {
-                "file": "_articles/Auction Core Thread.md",
+                "file": "_articles/Phantom Bonkler.md",
                 "linksCollapsed": false,
                 "unlinkedCollapsed": true
               }
@@ -117,7 +117,7 @@
             "state": {
               "type": "outline",
               "state": {
-                "file": "_articles/Auction Core Thread.md"
+                "file": "_articles/Phantom Bonkler.md"
               }
             }
           }
@@ -130,14 +130,14 @@
   },
   "active": "22f17adc312b3860",
   "lastOpenFiles": [
+    "_articles/Kaomoji Weaponry.md",
     "_articles/Exocore Installation Instructions.md",
     "_articles/Auction Core Thread.md",
+    "_articles/Greetings.md",
     "_daily/2022-10-02.md",
     "_daily/2022-10-01.md",
     "_articles/Phantom Bonkler.md",
     "_journal/Samgyetang Ginseng Chicken Soup (Korean Style).md",
-    "_articles/Greetings.md",
-    "_articles/Kaomoji Weaponry.md",
     "assets/imgs/BGtile-5.png",
     "assets/imgs/card.png"
   ]
