--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "_daily/2022-10-02.md",
+            "file": "exocore/_templates/_daily.md",
             "mode": "source",
             "source": true
           }
@@ -40,7 +40,7 @@
             "state": {
               "type": "search",
               "state": {
-                "query": "",
+                "query": "pfp",
                 "matchingCase": false,
                 "explainSearch": false,
                 "collapseAll": false,
@@ -57,7 +57,8 @@
               "state": {}
             }
           }
-        ]
+        ],
+        "currentTab": 1
       }
     ],
     "direction": "horizontal",
@@ -77,7 +78,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "_daily/2022-10-02.md",
+                "file": "exocore/_templates/_daily.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -94,7 +95,7 @@
             "state": {
               "type": "outgoing-link",
               "state": {
-                "file": "_daily/2022-10-02.md",
+                "file": "exocore/_templates/_daily.md",
                 "linksCollapsed": false,
                 "unlinkedCollapsed": true
               }
@@ -117,7 +118,7 @@
             "state": {
               "type": "outline",
               "state": {
-                "file": "_daily/2022-10-02.md"
+                "file": "exocore/_templates/_daily.md"
               }
             }
           }
@@ -131,11 +132,11 @@
   "active": "22f17adc312b3860",
   "lastOpenFiles": [
     "_daily/2022-10-01.md",
+    "_daily/2022-10-02.md",
     "_articles/Phantom Bonkler.md",
     "_articles/Kaomoji Weaponry.md",
     "_articles/Auction Core Thread.md",
     "_articles/Exocore Installation Instructions.md",
-    "_daily/2022-10-02.md",
     "exocore/_templates/_daily.md",
     "exocore/_templates/_article.md",
     "exocore/_templates/_wiki.md",
