--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -62,7 +62,8 @@
       }
     ],
     "direction": "horizontal",
-    "width": 296
+    "width": 296,
+    "collapsed": true
   },
   "right": {
     "id": "fa5c2b51a2ba60c1",
@@ -129,7 +130,7 @@
     "width": 300,
     "collapsed": true
   },
-  "active": "cf91471a0053b065",
+  "active": "22f17adc312b3860",
   "lastOpenFiles": [
     "_daily/2022-10-01.md",
     "_daily/2022-10-02.md",
