--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ docs/.sass-cache
 docs/.jekyll-metadata
 .test-workspace
 .jekyll-cache
+assets/attachments/The Last Love Song on this Little Planet (Sprite Remix) (Wim Mertens Score).mp4
