--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "_articles/Chise, Saikano, or The Last Love Song on this little Planet.md",
+            "file": "_articles/Chise.md",
             "mode": "source",
             "source": true
           }
@@ -77,7 +77,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "_articles/Chise, Saikano, or The Last Love Song on this little Planet.md",
+                "file": "_articles/Chise.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -94,7 +94,7 @@
             "state": {
               "type": "outgoing-link",
               "state": {
-                "file": "_articles/Chise, Saikano, or The Last Love Song on this little Planet.md",
+                "file": "_articles/Chise.md",
                 "linksCollapsed": false,
                 "unlinkedCollapsed": true
               }
@@ -117,7 +117,7 @@
             "state": {
               "type": "outline",
               "state": {
-                "file": "_articles/Chise, Saikano, or The Last Love Song on this little Planet.md"
+                "file": "_articles/Chise.md"
               }
             }
           }
@@ -128,11 +128,11 @@
     "width": 300,
     "collapsed": true
   },
-  "active": "e509f202f4abd033",
+  "active": "993bdc812243e6bc",
   "lastOpenFiles": [
     "exocore/_templates/_article.md",
     "exocore/_templates/_daily.md",
-    "_articles/Chise, Saikano, or The Last Love Song on this little Planet.md",
+    "_articles/Chise.md",
     "_articles/Auction Core Thread.md",
     "index.md",
     "_articles/Exocore Installation Instructions.md",
