--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -4,15 +4,11 @@
     "type": "split",
     "children": [
       {
-        "id": "993bdc812243e6bc",
+        "id": "6a04cdb21279ef2c",
         "type": "leaf",
         "state": {
-          "type": "markdown",
-          "state": {
-            "file": "_articles/Chise.md",
-            "mode": "source",
-            "source": true
-          }
+          "type": "empty",
+          "state": {}
         }
       }
     ],
@@ -77,7 +73,6 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "_articles/Chise.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -94,7 +89,6 @@
             "state": {
               "type": "outgoing-link",
               "state": {
-                "file": "_articles/Chise.md",
                 "linksCollapsed": false,
                 "unlinkedCollapsed": true
               }
@@ -116,9 +110,7 @@
             "type": "leaf",
             "state": {
               "type": "outline",
-              "state": {
-                "file": "_articles/Chise.md"
-              }
+              "state": {}
             }
           }
         ]
@@ -128,11 +120,11 @@
     "width": 300,
     "collapsed": true
   },
-  "active": "993bdc812243e6bc",
+  "active": "6a04cdb21279ef2c",
   "lastOpenFiles": [
+    "_articles/Chise.md",
     "exocore/_templates/_article.md",
     "exocore/_templates/_daily.md",
-    "_articles/Chise.md",
     "_articles/Auction Core Thread.md",
     "index.md",
     "_articles/Exocore Installation Instructions.md",
