--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "_articles/Praise Folder.md",
+            "file": "_daily/2022-10-03.md",
             "mode": "source",
             "source": true
           }
@@ -77,7 +77,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "_articles/Praise Folder.md",
+                "file": "_daily/2022-10-03.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -94,7 +94,7 @@
             "state": {
               "type": "outgoing-link",
               "state": {
-                "file": "_articles/Praise Folder.md",
+                "file": "_daily/2022-10-03.md",
                 "linksCollapsed": false,
                 "unlinkedCollapsed": true
               }
@@ -117,7 +117,7 @@
             "state": {
               "type": "outline",
               "state": {
-                "file": "_articles/Praise Folder.md"
+                "file": "_daily/2022-10-03.md"
               }
             }
           }
@@ -128,17 +128,17 @@
     "width": 300,
     "collapsed": true
   },
-  "active": "e509f202f4abd033",
+  "active": "6a04cdb21279ef2c",
   "lastOpenFiles": [
-    "_journal/Untitled.md",
+    "_daily/2022-10-02.md",
+    "_daily/2022-10-03.md",
     "_articles/Praise Folder.md",
+    "_journal/Untitled.md",
     "_articles/Phantom Bonkler.md",
     "_articles/Greetings.md",
     "_articles/Auction Core Thread.md",
     "_articles/Chise.md",
-    "_daily/2022-10-02.md",
     "_articles/Kaomoji Weaponry.md",
-    "exocore/_templates/_article.md",
-    "exocore/_templates/_daily.md"
+    "exocore/_templates/_article.md"
   ]
 }
