--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -130,15 +130,15 @@
   },
   "active": "6a04cdb21279ef2c",
   "lastOpenFiles": [
+    "_articles/Kaomoji Weaponry.md",
+    "_articles/The Exocore Workflow.md",
     "_articles/Graphwiz Testing.md",
     "_articles/Praise Folder.md",
-    "_articles/The Exocore Workflow.md",
     "_articles/Chise.md",
     "_articles/Phantom Bonkler.md",
     "_articles/Auction Core Thread.md",
     "_daily/2022-10-05.md",
     "_daily/2022-10-06.md",
-    "_daily/2022-10-03.md",
-    "_daily/2022-10-02.md"
+    "_daily/2022-10-03.md"
   ]
 }
